--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=semPraca
+
+spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:sqlite:VirLibrary.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
