--- a/FrontEnd/pom.xml
+++ b/FrontEnd/pom.xml
@@ -77,7 +77,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.frontend/org.example.frontend.Main</mainClass>
+                            <mainClass>org.example.frontend/org.example.frontend.MainWindow.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
